# Mipt_3_sem

./: README.md
Chatfifo/: CMakeLists.txt  Launchme  chat  main.c
Chatqueue/: CMakeLists.txt  chat  chat.c  res.out
Client-Server/: CMakeLists.txt  client.c  client.out  server.c  server.out
Semqu/: CMakeLists.txt  client.c  client.ent.out  client.out  server.c  server.out
TCP/: CMakeLists.txt  client.c  client.out  server.c  server.out
Threads/: Bakery_Algorithm.c  CMakeLists.txt  example_book.c  res.out  robot.c  robot_n.c  sem.c
UDP/: CMakeLists.txt  client.c  client.out  server.c  server.out
chatshmem/: CMakeLists.txt  a.out  chat  main.c  res.out
flood/: CMakeLists.txt  client.c  client.out  client2.c  client2.out  history.txt  server.c  server.out
sem/: CMakeLists.txt  main.c
task1/: a.out  main.c
task2/: CMakeLists.txt  Example  a.out  main.c
task3/: CMakeLists.txt  a.out  main.c
task4.1/: CMakeLists.txt  a.out  main.c
task4.2/: CMakeLists.txt  a.out  main.c
task4.3/: CMakeLists.txt  a.out  main.c
task4.4/: CMakeLists.txt  Laucnhme  Launchme  launchme  main.c
